welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: not enough arguments for method update: (i: Int, x: java.awt.Color)Unit.
Unspecified value parameter x.
	T()=getCouleurSol();
           ^